fixxing wrap col to row and trying some stuff

--- a/src/components/food/corb/ItemCorb.scss
+++ b/src/components/food/corb/ItemCorb.scss
@@ -1,7 +1,8 @@
 .food-wrapper {
-	height: 125px;
-    width: 101px;
+	height: 20px;
+	width: 20px;
     margin: 6px;
+	padding: 10px;
     display: flex;
 	flex-wrap: wrap;
     position: relative;
@@ -11,6 +12,7 @@
     max-width: 13em;
     max-height: 7em;
     border-radius: 15px;
+	
 
 
 	.food-quantity {
