--- a/src/components/food/corb/corb.scss
+++ b/src/components/food/corb/corb.scss
@@ -4,12 +4,17 @@
 	height: 100%;
 	width: 100%;
 	box-shadow: 3px 3px 3px 3px grey;
-	background-color: #e0d8d6;
+	position: relative;
 
-	.wrapper-corb {
+	.ItemCorb {
 		display: flex;
-		width: 30px;
-		height: 30px;
+		flex-direction: row;
 		flex-wrap: wrap;
+	}
+	.calorie-total {
+		background-color: rosybrown;
+		position: absolute;
+		bottom: 0;
+
 	}
 }
